Development
	When setting vo and ao options via Preferences, add some extra vo flags
	Implement more Advanced Video Controls
		Gamma, Hue and Saturation
			Gamma and Hue only seem to work with a vo of gl:yuv=3 or gl:yuv=4
			Saturation seems to need a vo of gl to work
	Implement Advanced Video Controls dialog 
		Brightness and Contrast are supported at the moment
	Add 'm' as mute toggle key.
	Fix crasher when not running under GNOME
	Error result in send_command
	GUI enhancements from Dmitry Stropaloff <helions8_AT_gmail.com> 
		More keyboard accelerators
		Remembering the last directory opened
	Change packing order for volume control and FS button so that they are aligned right
	Make sure proper controls are visible when embedded
	Make windows keep from popping when embedded
	Protect gtk_set_size_request calls
	Create autobuilding spec file
	Make fullscreen button appear when in fullscreen and hide it when window is small
	Version bump
	Try and make keyboard controls work in XEmbed mode
0.4.4
	Experamental dvdnav:// support by starting gnome-mplayer 
		with dvdnav:// as the filename to play
	Set noconsolecontrols option
	Fix tooltip on Play/Pause
	Hook up Normal/2:1/1:2 View menu options
	Keep F accelerator on right click menu, but add CTRL-F to View->Fullscreen
	Change accelerator CTRL-F to just F
	Add accelerator C to show/hide controls.
	Add some basic error dialogs when something can't be opened
	Create View Menu, but nothing is hooked up
	Fix video window size problem when playing a video playlist 
		(window grew vertically with each successive video)
	Disable window resize when a video is not loaded and playing
	Add verbose option so you can see the mplayer output
	Add Debian directory in
	Convert Play and Pause Buttons to single Play/Pause Button
	Fix new problem with audio resize issues
	Add Open DVD / Open Audio CD to File Menu
	Fix some audio resize issue
	Remove hookup_x11_events as it is no longer needed