@@ -63,6 +63,8 @@ GtkMenuItem *menuitem_file_open;
 GtkMenuItem *menuitem_file_open_dvd;
 GtkMenuItem *menuitem_file_open_acd;
 GtkMenuItem *menuitem_file_sep1;
+GtkMenuItem *menuitem_file_details;
+GtkMenuItem *menuitem_file_sep2;
 GtkMenuItem *menuitem_file_quit;
 GtkMenuItem *menuitem_edit;
 GtkMenu *menu_edit;
