@@ -1,4 +1,5 @@
 Development
+	Implement File->Details dialog
 	When setting vo and ao options via Preferences, add some extra vo flags
 	Implement more Advanced Video Controls
 		Gamma, Hue and Saturation
